parser/src/parser/expressions/snapshots/tests__parser::expressions::record_expr::tests::parse_empty_record_literal.snap
---
created: "2020-05-06T10:43:12.705071Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/record_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 19)
  FN_DEF@[0; 19)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 19)
      BLOCK@[10; 19)
        L_CURLY@[10; 11) "{"
        WHITESPACE@[11; 12) " "
        EXPR_STMT@[12; 17)
          RECORD_LITERAL_EXPR@[12; 17)
            IDENT_EXPR@[12; 15)
              NAME@[12; 15)
                IDENT@[12; 15) "foo"
            RECORD_LITERAL_FIELD_LIST@[15; 17)
              L_CURLY@[15; 16) "{"
              R_CURLY@[16; 17) "}"
        SEMI@[17; 18) ";"
        R_CURLY@[18; 19) "}"

