parser/src/parser/expressions/snapshots/tests__parser::expressions::unary::tests::parse_nested_unary_expr.snap
---
created: "2020-05-06T10:43:12.713138Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/unary.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 19)
  FN_DEF@[0; 19)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 19)
      BLOCK@[10; 19)
        L_CURLY@[10; 11) "{"
        EXPR_STMT@[11; 17)
          PREFIX_EXPR@[11; 17)
            EXCL@[11; 12) "!"
            PREFIX_EXPR@[12; 17)
              EXCL@[12; 13) "!"
              LITERAL@[13; 17)
                TRUE_KW@[13; 17) "true"
        SEMI@[17; 18) ";"
        R_CURLY@[18; 19) "}"

